Added help message about code formatting.

--- a/src/main/webapp/help/wiki-help.htm
+++ b/src/main/webapp/help/wiki-help.htm
@@ -86,6 +86,20 @@ Display:
  }
 </pre>
 
+<h2>Preformatted Text With Syntax Highlight</h2>
+<p>In order to mark a paragraph as preformatted source code text, add tags &#35;pre and &#35;code to your fragment.</p>
+
+<pre>
+ public static void main(String[] args) {
+   System.out.println("Hello world!");
+ }
+</pre>
+
+Display:
+<pre class="pre-fragment prettyprint"><span class="pln"> </span><span class="kwd">public</span><span class="pln"> </span><span class="kwd">static</span><span class="pln"> </span><span class="kwd">void</span><span class="pln"> main</span><span class="pun">(</span><span class="typ">String</span><span class="pun">[]</span><span class="pln"> args</span><span class="pun">)</span><span class="pln"> </span><span class="pun">{</span><span class="pln">
+   </span><span class="typ">System</span><span class="pun">.</span><span class="kwd">out</span><span class="pun">.</span><span class="pln">println</span><span class="pun">(</span><span class="str">"Hello world!"</span><span class="pun">);</span><span class="pln">
+ </span><span class="pun">}</span></pre>
+
 <h2>Blockquotes</h2>
 <p>In order to mark a paragraph as blockquote, start the line of that paragraph with '&gt;'</p>
 
